# nanoclaw

./: .env.example  .gitignore  create-new-sandbox.sh  nanoclaw.sh  new-sandbox-orientation.md  package-lock.json  package.json  start-nanoclaw.sh
.claude/skills/setup/: SKILL.md
.github/workflows/: bump-version.yml  update-tokens.yml
container/: Dockerfile
container/skills/capabilities/: SKILL.md
docs/superpowers/plans/: 2026-04-12-tts-voice-response.md  2026-04-13-brian-to-sid-handoff.md
docs/superpowers/specs/: 2026-04-12-tts-voice-response-design.md  2026-04-13-brian-to-sid-handoff-design.md
groups/global/: CLAUDE.md
groups/main/: CLAUDE.md
scripts/: claw  claw-chat
setup/: groups.ts  register.ts
src/: config.ts  container-runner.test.ts  container-runner.ts  container-runtime.ts  db.ts  env.ts  index.ts  ipc-auth.test.ts  ipc-handoff.test.ts  ipc.ts  mount-security.test.ts  mount-security.ts  router.ts  task-scheduler.test.ts  task-scheduler.ts  transcription.ts  tts.test.ts  tts.ts  types.ts
src/channels/: index.ts  telegram.test.ts  telegram.ts  whatsapp.test.ts  whatsapp.ts
tts-sidecar/: pyproject.toml  server.py  test_server.py
